fix problem in firefox where table cell contents break in the middle of a word instead of making the table wider

--- a/resources/gato-template-txstate2015/css/_styledcontent.scss
+++ b/resources/gato-template-txstate2015/css/_styledcontent.scss
@@ -140,7 +140,8 @@
         margin: 1.2rem;
       }
     }
-    td, th{
+    td, th {
+      word-wrap: normal;
       padding: 0.5rem 1rem;
       border-color: $khaki;
     }
